Dark mode fix

--- a/assets/css/dark.scss
+++ b/assets/css/dark.scss
@@ -125,7 +125,8 @@ img {
 
 .card,
 .jumbotron,
-.list-group-item {
+.list-group-item,
+ol.breadcrumb {
   background: $dark-800;
 }
 
